????-??-??: 4.0.0

	General improvements and optimizations:

	js : improved generation of `break` inside `switch` inside loops (#4964)
	cs : improved generation of enum classes (#6119)
	sys : the `database` parameter of `Mysql.connect` is now optional
	js : updated jQuery extern (js.jquery.*) for jQuery 1.12.4 / 3.2.1 support.

	Removals:

	sys : SPOD (sys.db.Object, sys.db.Manager and friends) was moved into a separate library `record-macros` (https://github.com/HaxeFoundation/record-macros)
	js : js.JQuery and js.SWFObject were moved into hx3compat library (https://github.com/HaxeFoundation/hx3compat),
	     it's recommended to use more modern js.jquery.JQuery and js.swfobject.SWFObject classes.

	Bugfixes:

	php7: fix Reflect.field() for strings (#6276)
	php7: fix `@:enum abstract` generation  without `-dce full` (#6175)
	php7: fix using enum constructor with arguments as a call argument (#6177)
	php7: fix `null` property access (#6281)
	php7: fix setting values in a map stored in another map (#6257)
	php/php7: fixed accessing enum constructors on enum type stored to a variable (#6159)
	php/php7: fix "cannot implement previously implemented interface" (#6208)
	php: fix invoking functions stored in dynamic static vars (#6158)
	php: fix field access on `new MyClass()` expressions wrapped in a `cast` (#6294)

	Standard Library:

	all : added `EReg.escape` (#5098)
	all : `BalancedTree implements `haxe.Constraints.IMap` (#6231)

2017-03-20: 3.4.2

	Bugfixes:

	cpp : fixed issue with @:native names being prefixed with :: (#6086)
	cpp : fixed issue with return type handling (#6103)
	cpp : fixed inaccurate line numbers that threw off debugging
	php7 : fixed generation of `[][0]` constructs (#6090)

2017-03-17: 3.4.1

	New features:

	php7 : added source maps generation with `-D source_map` flag.

	General improvements and optimizations:

	cpp : added cpp.Star and cpp.Struct to help with extern typing
	lua : cleaned up various parts of the standard library

	Bugfixes:
